@@ -78,6 +78,10 @@ protected slots:
      */
     void home();
 
+    /*
+     * Refreshes current directory
+     */
+    void refresh();
     /**
      * Handle results of tryiong to setup an item in "places" that needed mouting or other
      * special setup.
